@@ -1,6 +1,7 @@
 INCLUDES = \
-    -DGNOMELOCALEDIR=\""$(datadir)/locale"\" 	\
-    -I$(top_srcdir)/src	-I$(top_builddir)/src	\
+    -DGNOMELOCALEDIR=\""$(datadir)/locale"\" 		\
+    -I$(top_srcdir)/src	-I$(top_builddir)/src		\
+    -I$(top_srcdir)/src/cut-n-paste-code/goffice	\
     $(GNUMERIC_CFLAGS)
 
 gnumeric_plugin_exceldir = $(gnumeric_plugindir)/excel
