@@ -4210,6 +4210,7 @@ excel_read_HLINK (BiffQuery *q, ExcelReadSheet *esheet)
 	if (ms_biff_query_peek_next (q, &next_opcode) &&
 	    next_opcode == BIFF_LINK_TIP) {
 		ms_biff_query_next (q);
+		/* according to OO the bytes 2..10 are the range for the tip */
 		tip = read_utf16_str ((q->length - 10)/ 2, q->data + 10);
 	}
 
