@@ -328,7 +328,6 @@ gnumeric_app_libs =				\
 	tools/solver/libsolver.a		\
 	tools/solver/glpk/source/libglpk.a	\
 	tools/solver/lp_solve/liblp_solve.a	\
-	cut-n-paste-code/goffice/graph/libgoffice-graph.a	\
 	cut-n-paste-code/foocanvas/libfoocanvas/libfoocanvas.a
 
 if WITH_BONOBO
